# artifacts

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml  config.toml.example  shell.nix
src/: action_queue.rs  character.rs  conditions.rs  config.rs  error.rs  main.rs  response.rs
src/tasks/: copper_ingots.rs  deposit_inventory.rs  kill_chickens.rs  kill_cows.rs  kill_yellow_slime.rs  mine_copper.rs  mine_iron.rs  mod.rs
