[package]
name = "artifacts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }
base64 = "0.21"
rand = "0.8"
regress = "0.4.1"
futures = "0.3.30"
toml = "0.8.16"
thiserror = "1.0.63"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
